Introduce gestión de proveedores de almacenamiento seguro, añade soporte para migración de credenciales legacy y optimiza exportación de configuraciones.